Three reasons added to index.html and css updated

--- a/index.html
+++ b/index.html
@@ -50,9 +50,49 @@
                         <h3 class="section-heading uppercase">About Me</h3>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="reasons-icon fas fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>
+                                    I'm a skilled Full Stack Developerwith a wealth of diverse work and technical experience which I bring to each project. With a background in the humanities and business management, I possess soft skills and strong leadership qualities.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="reasons-icon fas fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p>
+                                    I follow form and function, with a background in design and fine art, I understand aestheics and have a keen interest in creating great User Experience.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="reasons-icon fas fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                <p>
+                                    I work quickly and effectively across the stack. I'm an excellent communicator who thrives in an enthusatic team, and work equally well in self-directed, solo work settings.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
