--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>TEGAN ROSE</title>
+    <title>TS Rose</title>
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
-                        <h1 class="name">Tegan Rose</h1>
+                        <h1 class="name">T Scott Rose</h1>
                         <h2 class="title">Full Stack Developer</h2>
                     </div>
                 </div>
@@ -43,7 +43,50 @@
         </div>
     </header>
     <section class="container-fluid">
-        <div class="row row-table">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">Personal Info</h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                        Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                        T. Scott Rose
+                        </p>
+                    </div>
+                </div>
+             <div class="personal-info-item">
+                <div class="key">
+                    <p class="uppercase">
+                        Location:
+                    </p>
+                </div>               
+                <div class="value">
+                    <p>
+                        Amsterdam, Netherlands
+                    </p>
+                </div>
+            </div>
+            <div class="personal-info-item">
+                <div class="key">
+                    <p class="uppercase">
+                        Email:
+                    </p>
+                </div>
+                <div class="value">
+                    <p>
+                        tsrose@gmail.com
+                    </p>
+                </div>        
+            </div>
+            </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
@@ -59,7 +102,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developerwith a wealth of diverse work and technical experience which I bring to each project. With a background in the humanities and business management, I possess soft skills and strong leadership qualities.
+                                    I'm a skilled Full Stack Developer with a wealth of diverse work and technical experience which I bring to each project. With a background in the humanities and business management, I possess soft skills and strong leadership qualities.
                                 </p>
                             </div>
                         </div>
