--- a/resume.html
+++ b/resume.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>TEGAN ROSE</title>
+    <title>TS Rose</title>
 </head>
 <body>
     <header>
         <div class="row no-gutters">
             <a href="index.html" class="col-md-4 logo">
-
             </a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
-                        <h1 class="name">Tegan Rose</h1>
+                        <h1 class="name">T Scott Rose</h1>
                         <h2 class="title">Full Stack Developer</h2>
                     </div>
                 </div>
@@ -43,8 +42,65 @@
             </div>
         </div>
     </header>
-    <section>
-        
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">Work History</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">My Skills</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="reasons-icon fas fa-tv" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Front End</h4>
+                                <p>
+                                    I'm a skilled Full Stack Developer with a wealth of diverse work and technical experience which I bring to each project. With a background in the humanities and business management, I possess soft skills and strong leadership qualities.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="reasons-icon fas fa-cogs" aria-hidden="true"></i>
+                            </div>
+
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Back End</h4>
+                                <p>
+                                    I follow form and function, with a background in design and fine art, I understand aestheics and have a keen interest in creating great User Experience.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-value="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                            <span class="sr-only">90% complete</span></div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-value="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            <span class="sr-only">80% complete</span></div>
+                        </div>
+                        <span class="progress-type">CSS / CSS3</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
