--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-info section-column">
                 <div class="row">
                     <div class="col-12">
                         <h3 class="section-heading uppercase">Work History</h3>
@@ -65,8 +65,8 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
-                                <p>
-                                    I'm a skilled Full Stack Developer with a wealth of diverse work and technical experience which I bring to each project. With a background in the humanities and business management, I possess soft skills and strong leadership qualities.
+                                 <p>
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React.
                                 </p>
                             </div>
                         </div>
@@ -80,23 +80,44 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I follow form and function, with a background in design and fine art, I understand aestheics and have a keen interest in creating great User Experience.
+                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-value="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                            <span class="sr-only">90% complete</span></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">HTML / HTML5</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-value="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                            <span class="sr-only">80% complete</span></div>
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
                         </div>
-                        <span class="progress-type">CSS / CSS3</span>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+                                <span class="sr-only">70% complete</span>
+                            </div>
+                            <span class="progress-type">JavaScript / jQuery</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">Django / Python</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">SQL / NoSQL</span>
+                        </div>
                     </div>
                 </div>
             </div>
