--- a/resume.html
+++ b/resume.html
@@ -44,11 +44,33 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-work-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Work History</h3>
+                        <h3 class="history-heading uppercase">Work History</h3>
                     </div>
+                </div>
+                <div class="history-items">
+                <div class="timeline-item" data-dates="04/2021 - 10/2021">
+                    <h4>Diploma of Software Development </h4>
+                    <p>Code Institute</p>
+                </div>
+                <div class="timeline-item" data-dates="07/2017 - 06/2018">
+                    <h4>Bachelor of Linguistics</h4>
+                    <p>University of Amsterdam</p>
+                </div>
+                <div class="timeline-item" data-dates="03/2014 - 06/2017">
+                    <h4>Travel / Sabbatical </h4>
+                    <p>Nomadic travel & stints working in various parts of the world </p>
+                </div>
+                <div class="timeline-item" data-dates="02/2008 - 02/2014">
+                    <h4>Ink & Spindle</h4>
+                    <p>Founder / Designer / Manager</p>
+                </div>
+                <div class="timeline-item" data-dates="01/2006 - 12/2008">
+                    <h4>Secondary College Teacher</h4>
+                    <p>Classroom Teacher, Faculty of the Arts</p>
+                </div>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
